--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Ngoc Xuan<xuanngoc1992@gmail.com>
 sentence=GSM basic functions
 paragraph=GSM basic functions
 category=Communication
-url=http://www.codeproject.com/Articles/732646/Fast-digital-I-O-for-Arduino
+url=http://hshop.vn
 architectures=avr
 includes=Hshopvn_GSM.h
