--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Ngoc Xuan<xuanngoc1992@gmail.com>
 sentence=GSM basic functions
 paragraph=GSM basic functions
 category=Communication
-url=http://www.hspace.vn/sim808-gsmgps-shield-tong-quan/
+url=https://github.com/Khuuxuanngoc/Hshopvn_GSM
 architectures=avr
 includes=Hshopvn_GSM.h
